--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^8.8.0",
+    "firebase": "^8.10.0",
+    "firestore": "^1.1.6",
     "history": "^5.0.0",
+    "lite": "^4.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
